--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rose For Jinxia</title>
+<title>Rose For Wangbo</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <script src="jquery.min.js"></script>
 </head>
 <body style="margin:0;padding:0;width:100%;height:100%">
-<div style="text-align: center; font-size:18px; font-style:bold; margin-top:20px;margin-bottom:-20px;"> Rose For Jinxia </div>
+<div style="text-align: center; font-size:18px; font-style:bold; margin-top:20px;margin-bottom:-20px;"> Rose For Wangbo </div>
 <div style="text-align: center">
 <canvas id="c" style="width:100%;height:100%"></canvas>
 </div>
